--- a/style.css
+++ b/style.css
@@ -1,30 +1,39 @@
 body {
     background-color: rgb(196, 146, 146);
 }
+
 h1 {
-    color :aqua
+    color: aqua
 }
+
 h3 {
     color: deeppink;
 }
-p1 {
+
+#pierwszy {
     color: aquamarine;
 }
-p2 {
+
+#drugi {
     color: blue;
 }
+
 span1 {
     color: greenyellow;
 }
+
 span2 {
     color: brown;
 }
+
 span3 {
-    color :yellow;
+    color: yellow;
 }
+
 span4 {
     color: orangered;
 }
+
 span5 {
     color: purple;
 }
